database/database_statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-headless
  labels:
    app: database-headless
spec:
  ports:
    - port: 9042
      name: data
  clusterIP: None
  selector:
    app: database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
  serviceName: database-headless
  replicas: 2
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: cass
          image: bitnami/cassandra:4.0.7
          ports:
            - containerPort: 9042
              name: data
          volumeMounts:
            - name: cql-scripts
              mountPath: /docker-entrypoint-initdb.d
            - name: nfs
              mountPath: /bitnami
          securityContext:
            allowPrivilegeEscalation: false

      volumes:
        - name: cql-scripts
          configMap:
            name: database-configmap
            items:
              - key: "db_initial_data.cql"
                path: "db_initial_data.cql"
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs
  volumeClaimTemplates:
    - metadata:
        name: nfs
      spec:
        accessModes:
          - ReadWriteMany
        storageClassName: "nfs-csi"
        resources:
          requests:
            storage: 10Mi
