database/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: db-test
        - podSelector:
            matchLabels:
              app: backend
        - podSelector:
            matchLabels:
              app: database
      ports:
        - protocol: TCP
          port: 9042
        - protocol: TCP
          port: 7000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: database
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 9042
        - protocol: TCP
          port: 7000
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
